Update ZipFileCodeBaseEntry.java