@@ -21,6 +21,7 @@ package edu.umd.cs.findbugs.classfile.impl;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.Path;
 import java.util.zip.ZipEntry;
 
 import edu.umd.cs.findbugs.classfile.ClassDescriptor;
@@ -82,8 +83,8 @@ public class ZipFileCodeBaseEntry extends AbstractScannableCodeBaseEntry {
     @Override
     public String getRealResourceName() {
         String entryName = zipEntry.getName();
-        Path entryPath = Paths.get(entryName).normalize();
-        Path zipRootPath = Paths.get("").toAbsolutePath().normalize();
+        Path entryPath = Path.of(entryName).normalize();
+        Path zipRootPath = Path.of("").toAbsolutePath().normalize();
         if (!entryPath.startsWith(zipRootPath) || entryName.contains("..")) {
             throw new IllegalArgumentException("Invalid zip entry name: " + entryName);
         }
